# playground-for-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: basiccoffee.h  emailnotifier.h  iproduct.h  milkdecorator.h  notifier.h  notifierdecorator.h  productdecorator.h  slackdecorator.h  smsdecorator.h  sugardecorator.h  whippedcreamdecorator.h
src/: emailnotifier.cpp  main.cpp  milkdecorator.cpp  notifierdecorator.cpp  slackdecorator.cpp  smsdecorator.cpp  sugardecorator.cpp  whippedcreamdecorator.cpp
